--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   </head>
   <body>
+    <div id="debug"></div>
     <div id="viz"></div>
+
     <!-- Main script -->
     <script src="js/main.js"></script>
     
