--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="debug"></div>
-    <div id="viz"></div>
+    <div id="viz" style="width:100%;height:100%;max-width:100%;max-height:100%;"></div>
 
     <!-- Main script -->
     <script src="js/main.js"></script>
